Added a missing language spanner.

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
           <li>What symbols benefit from shape change?</li>
           <li>What symbols benefit from weight change?</li>
           <li>Noteworthy for layout correction is that an isolated left double guillemet, », is common in tabular text to indicate that the entry above is to be duplicated. This is a use case
-              where the left double guillemet is not required to be balanced by a right double guillemet (“ትእምርተ፡ደጊመ፡ቃል፡” context).</li>
+              where the left double guillemet is not required to be balanced by a right double guillemet (“<span lang="am">ትእምርተ፡ደጊመ፡ቃል፡</span>” context).</li>
           <li>Are square “dots” in punctuation preferable over circular?</li>
         </ol>
       </div>
