substitution of some straight quotes for curly quotes.

--- a/index.html
+++ b/index.html
@@ -1665,8 +1665,8 @@
       <p>In Ethiopic book publishing, the first numbered page will generally be seen on the <span lang="am">መቅድም</span> section. When a <span lang="am">መቅድም</span> section is not present,
          numbering is expected to begin at the <span lang="am">መግቢያ</span>. The prevailing Modern Ethiopic practice is to begin counting pages from the inner cover page (this
          is a matter of perception, by some views the outer cover is the first page and the inner cover, which is generally empty, is not counted). Thus the first printed
-         number appearing at either the <span lang="am">መቅድም</span> or <span lang="am">መግቢያ</span> is not "1" (or "<span lang="am">፩</span>") but the physical page count up to
-         this point (for example "4" or "5").</p>
+         number appearing at either the <span lang="am">መቅድም</span> or <span lang="am">መግቢያ</span> is not “1” (or “<span lang="am">፩</span>”) but the physical page count up to
+         this point (for example “4” or “5”).</p>
       <p>At the author's discretion, either Western or Ethiopic numerals may be used for page numbers. In digital publishing, it is recommended that the a setting be offered
          the user to toggle the numeral system from the published default. Additionally, a tooltip that appears when focus is over an Ethiopic page number to present the Western
          numeral equivalent would be helpful for some readers.</p>
@@ -1683,7 +1683,7 @@
         <p>Increasingly, modern authors and publishers are adding additional front matter sections (see <a href="#h_document_structure">Document Structure</a>) and moving "page 1"
            out to either the <span lang="am">መቅድም</span> or <span lang="am">መግቢያ</span>. Prior to "page 1" preceding pages may be numbered in one of two ways.  In the first
            convention where pages are numbered with Ethiopic numerals, the preface numbering may be alphabetic in the <span lang="am">ሀለሐመ</span> counting system or in the
-           <span lang="am">አበገደ</span> sequence (for example in Deste Tekle Wold's "<span lang="am">ዐዲስ፡ያማርኛ፡መዝገበ፡ቃላት።</span>").</p>
+           <span lang="am">አበገደ</span> sequence (for example in Desta Tekle Wold's “<span lang="am">ዐዲስ፡ያማርኛ፡መዝገበ፡ቃላት።</span>”).</p>
         <p>In the second convention where pages are numbers with Western numerals, the preface page numbering will apply Ethiopic numerals.  Under both conventions the preface page
            number begins on the first printed page after the cover.</p>
         <div class="issues">
