Correction to both English and Amharic spelling of "Acknowledgement" in the glossary. Changed to traditional spelling, in keeping with the example under the kerning section.

--- a/index.html
+++ b/index.html
@@ -1919,8 +1919,8 @@
         <td>The system of marking intonation in Ge’ez hymnody devised by the 6<sup>th</sup> century Saint Yared of Axum.</td>
       </tr>
       <tr id="term.acknolwedgment">
-        <td>Acknowledgment</td>
-        <td lang="am">ምስጋና</td>
+        <td>Acknowledgement</td>
+        <td lang="am">ምሥጋና</td>
         <td lang="ti">ምስጋና</td>
         <td></td>
       </tr>
