Formatted Use Case 8.

--- a/ZaimaCSS/ZaimaUseCases.html
+++ b/ZaimaCSS/ZaimaUseCases.html
@@ -715,55 +715,118 @@ Selot Kidassie p. 129
   <li>Unable to right align ruby-text over the final base character on rows 1, 2 and 3. Attempts were made with variations on:  style="float: right; text-align: right; white-space: nowrap;"</li>
 </ul>
 
-
 <h3>Use Case 8</h3>
 <table>
+  <col width="900px"/>
+  <col width="580px"/>
   <tr>
   <td><img src="use-cases/SelotKidasiePage103i1.png"/></td>
-  <td width="50%" valign="bottom">
-    <div style="position: relative; top: 80px;">
-    <ruby class="row4ex">
-      <rb>ከ</rb><rt></rt>
-      <rb>በሮ</rb><rt><span>በ᎖</span></rt>
+  <td valign="bottom">
+    <div style="position: relative; top: 60px;">
+    <span style="font-size: 50px;">ይሕ፤</span
+    ><ruby class="row3ex red-miliket">
+      <rb>ኪ</rb><rt><span></span></rt>
+      <rb>ያ</rb><rt><span></span></rt>
+      <rb>ከ</rb><rt><span></span></rt><rb>፡ን</rb><rt><span></span></rt>
+      <rb>ሴብሕ</rb><rt><span>᎓ጢረ᎓᎖᎓᎓</span></rt><rb>፡</rb><rb>እ</rb><rt><span></span></rt>
+      <rb>ግዚ</rb><rt><span></span></rt>
+      <rb>ኦ</rb><rt><span></span></rt>
     </ruby>
-    <ruby class="row3ex">
-      <rb>ከ</rb><rt></rt>
-      <rb>በ</rb><rt><span>᎓</span></rt>
-      <rb>ሮ</rb><rt><span>ሞኂ</span></rt>
-    </ruby>
-    <ruby class="row2ex">
-      <rb>ከ</rb><rt><span>᎖</span></rt>
-      <rb>በ</rb><rt></rt>
-      <rb>ሮ</rb><rt><span>ሥቱ</span></rt>
+    <ruby class="row2ex red-miliket">
+      <rb>ኪ</rb><rt><span>ረዩ</span></rt>
+      <rb>ያከ</rb><rt><span>᎓᎖᎓᎖᎓᎓᎖᎓</span></rt><rb>፡ን</rb><rt><span>&nbsp;᎑</span></rt>
+      <rb>ሴ</rb><rt><span>᎓</span></rt>
+      <rb>ብ</rb><rt><span>᎖᎖</span></rt>
+      <rb>ሕ</rb><rt><span>᎑</span></rt><rb>፡</rb><rb>እ</rb><rt><span>&nbsp;᎗</span></rt>
+      <rb>ግዚ</rb><rt><span></span></rt>
+      <rb>ኦ</rb><rt><span>ሰ</span></rt>፡
     </ruby>
     <ruby class="row1">
-      <rb>ከ</rb><rt><span>᎐</span></rt>
-      <rb>በ</rb><rt><span>᎐</span></rt>
-      <rb>ሮ</rb><rt><span>ር</span></rt>
+      <rb>ኪ</rb><rt>᎗</rt>
+      <rb>ያ</rb><rt>᎐</rt>
+      <rb>ከ</rb><rt>ቱ</rt><rb>፡ን</rb><rt>&nbsp;᎑</rt>
+      <rb>ሴ</rb><rt>᎖</rt>
+      <rb>ብ</rb><rt style="text-align: right;">᎖</rt>
+      <rb>ሕ</rb><rt>᎑</rt><rb>፡</rb><rb>እ</rb><rt>&nbsp;᎗</rt>
+      <rb>ግዚ</rb><rt></rt>
+      <rb>ኦ</rb><rt>ሰ</rt>፡
+    </ruby>
+<br/><br/>
+    <span style="font-size: 50px;">ይሕ፤</span
+    ><ruby class="row2ex red-miliket">
+      <rb>ኪያ</rb><rt><span>᎓᎖᎓᎖</span></rt>
+      <rb>ከ</rb><rt><span>ረዩ</span></rt>
+      <rb>፡ን</rb><rt><span>&nbsp;᎑</span></rt>
+      <rb>ዌ</rb><rt><span>᎓</span></rt>
+      <rb>ድ</rb><rt><span>᎖᎖</span></rt>
+      <rb>ስ</rb><rt><span>᎑</span></rt>፡<rb>እ</rb><rt><span>&nbsp;᎗</span></rt>
+      <rb>ግዚ</rb><rt><span></span></rt>
+      <rb>ኦ</rb><rt><span>ሰ</span></rt>፡
+    </ruby>
+    <ruby class="row1">
+      <rb>ኪ</rb><rt>᎗</rt>
+      <rb>ያ</rb><rt>᎐</rt>
+      <rb>ከ</rb><rt>ቱ</rt><rb>፡ን</rb><rt>&nbsp;᎑</rt>
+      <rb>ዌ</rb><rt>᎖</rt>
+      <rb>ድ</rb><rt>᎖</rt>
+      <rb>ስ</rb><rt>᎑</rt>፡<rb>እ</rb><rt>&nbsp;᎗</rt>
+      <rb>ግዚ</rb><rt></rt>
+      <rb>ኦ</rb><rt>ሰ</rt>፡
     </ruby>
     </div>
   </td>
   </tr>
   <tr>
   <td colspan="2"><script type="text/plain">
-    <ruby class="row4ex">
-      <rb>ከ</rb><rt></rt>
-      <rb>በሮ</rb><rt><span>በ᎖</span></rt>
+    <span style="font-size: 50px;">ይሕ፤</span
+    ><ruby class="row3ex red-miliket">
+      <rb>ኪ</rb><rt><span></span></rt>
+      <rb>ያ</rb><rt><span></span></rt>
+      <rb>ከ</rb><rt><span></span></rt><rb>፡ን</rb><rt><span></span></rt>
+      <rb>ሴብሕ</rb><rt><span>᎓ጢረ᎓᎖᎓᎓</span></rt><rb>፡</rb><rb>እ</rb><rt><span></span></rt>
+      <rb>ግዚ</rb><rt><span></span></rt>
+      <rb>ኦ</rb><rt><span></span></rt>
     </ruby>
-    <ruby class="row3ex">
-      <rb>ከ</rb><rt></rt>
-      <rb>በ</rb><rt><span>᎓</span></rt>
-      <rb>ሮ</rb><rt><span>ሞኂ</span></rt><!-- rt right align desired -->
-    </ruby>
-    <ruby class="row2ex">
-      <rb>ከ</rb><rt><span>᎖</span></rt>
-      <rb>በ</rb><rt></rt>
-      <rb>ሮ</rb><rt><span>ሥቱ</span></rt><!-- rt right align desired -->
+    <ruby class="row2ex red-miliket">
+      <rb>ኪ</rb><rt><span>ረዩ</span></rt>
+      <rb>ያከ</rb><rt><span>᎓᎖᎓᎖᎓᎓᎖᎓</span></rt><rb>፡ን</rb><rt><span>&nbsp;᎑</span></rt>
+      <rb>ሴ</rb><rt><span>᎓</span></rt>
+      <rb>ብ</rb><rt><span>᎖᎖</span></rt>
+      <rb>ሕ</rb><rt><span>᎑</span></rt><rb>፡</rb><rb>እ</rb><rt><span>&nbsp;᎗</span></rt>
+      <rb>ግዚ</rb><rt><span></span></rt>
+      <rb>ኦ</rb><rt><span>ሰ</span></rt>፡
     </ruby>
     <ruby class="row1">
-      <rb>ከ</rb><rt><span>᎐</span></rt>
-      <rb>በ</rb><rt><span>᎐</span></rt>
-      <rb>ሮ</rb><rt><span>ር</span></rt><!-- rt right align desired -->
+      <rb>ኪ</rb><rt>᎗</rt>
+      <rb>ያ</rb><rt>᎐</rt>
+      <rb>ከ</rb><rt>ቱ</rt><rb>፡ን</rb><rt>&nbsp;᎑</rt>
+      <rb>ሴ</rb><rt>᎖</rt>
+      <rb>ብ</rb><rt>᎖</rt>
+      <rb>ሕ</rb><rt>᎑</rt><rb>፡</rb><rb>እ</rb><rt>&nbsp;᎗</rt>
+      <rb>ግዚ</rb><rt></rt>
+      <rb>ኦ</rb><rt>ሰ</rt>፡
+    </ruby>
+<br/><br/>
+    <span style="font-size: 50px;">ይሕ፤</span
+    ><ruby class="row2ex red-miliket">
+      <rb>ኪያ</rb><rt><span>᎓᎖᎓᎖</span></rt>
+      <rb>ከ</rb><rt><span>ረዩ</span></rt>
+      <rb>፡ን</rb><rt><span>&nbsp;᎑</span></rt>
+      <rb>ዌ</rb><rt><span>᎓</span></rt>
+      <rb>ድ</rb><rt><span>᎖᎖</span></rt>
+      <rb>ስ</rb><rt><span>᎑</span></rt>፡<rb>እ</rb><rt><span>&nbsp;᎗</span></rt>
+      <rb>ግዚ</rb><rt><span></span></rt>
+      <rb>ኦ</rb><rt><span>ሰ</span></rt>፡
+    </ruby>
+    <ruby class="row1">
+      <rb>ኪ</rb><rt>᎗</rt>
+      <rb>ያ</rb><rt>᎐</rt>
+      <rb>ከ</rb><rt>ቱ</rt><rb>፡ን</rb><rt>&nbsp;᎑</rt>
+      <rb>ዌ</rb><rt>᎖</rt>
+      <rb>ድ</rb><rt>᎖</rt>
+      <rb>ስ</rb><rt>᎑</rt>፡<rb>እ</rb><rt>&nbsp;᎗</rt>
+      <rb>ግዚ</rb><rt></rt>
+      <rb>ኦ</rb><rt>ሰ</rt>፡
     </ruby>
   </script></td>
   </tr>
@@ -1393,7 +1456,7 @@ Selot Kidassie p. 129
 <h3>Use Case 16</h3>
 <table>
   <col width="500px"/>
-  <col width="360px"/>
+  <col width="340px"/>
   <tr>
   <td><img src="use-cases/ZimarieWemewasitPageSecondHalf34i2-600dpi.png"/></td>
   <td valign="bottom">
@@ -1494,13 +1557,13 @@ Selot Kidassie p. 129
 <h3>Use Case 17</h3>
 <table>
   <col width="260px"/>
-  <col width="200px"/>
+  <col width="320px"/>
   <tr>
   <td><img src="use-cases/MerhaLiqawntPage84i6.png"/></td>
   <td valign="bottom">
     <div style="position: relative; top: 40px;">
     <ruby class="row2ex red-miliket">
-      <rb>ዘኮ</rb><rt><span>᎐ ᎙ ᎙</span></rt>
+      <rb>ዘኮ&nbsp;</rb><rt style="text-align: left;"><span>᎐&nbsp;᎙ ᎙</span></rt>
       <rb>ነ፡</rb><rt><span>᎙ሙ᎘</span></rt>
     </ruby>
     <ruby class="row1">
@@ -1512,6 +1575,14 @@ Selot Kidassie p. 129
   </tr>
   <tr>
   <td colspan="2"><script type="text/plain">
+    <ruby class="row2ex red-miliket">
+      <rb>ዘኮ&nbsp;</rb><rt style="text-align: left;"><span>᎐&nbsp;᎙ ᎙</span></rt>
+      <rb>ነ፡</rb><rt><span>᎙ሙ᎘</span></rt>
+    </ruby>
+    <ruby class="row1">
+      <rb>ዘኮ&nbsp;</rb><rt style="text-align: left;">ወኮ᎖᎓᎔᎓᎖</rt>
+      <rb>ነ፡</rb><rt>᎖᎔᎖᎔</rt>
+    </ruby>
   </script></td>
   </tr>
 </table>
