Formatted Use Case 12.

--- a/ZaimaCSS/ZaimaUseCases.html
+++ b/ZaimaCSS/ZaimaUseCases.html
@@ -991,55 +991,124 @@ Selot Kidassie p. 129
   <li>Unable to right align ruby-text over the final base character on rows 1, 2 and 3. Attempts were made with variations on:  style="float: right; text-align: right; white-space: nowrap;"</li>
 </ul>
 
+    ᎐ ᎓ ᎒ ᎙ ᎑ ᎔ ᎖᎕  ᎗  ᎘<br/>
 
 <h3>Use Case 10</h3>
 <table>
+  <col width="935px"/>
+  <col width="680px"/>
   <tr>
-  <td><img src="use-cases/SelotKidasiePage189i1.png"/></td>
-  <td width="50%" valign="bottom">
-    <div style="position: relative; top: 80px;">
-    <ruby class="row4ex">
-      <rb>ከ</rb><rt></rt>
-      <rb>በሮ</rb><rt><span>በ᎖</span></rt>
+  <td style="vertical-align: baseline;"> <br/><img style="display: block; margin-left: auto; margin-right: auto; vertical-align: bottom;" src="use-cases/SelotKidasiePage189i1.png"/></td>
+  <td height="170" valign="bottom">
+    <div style="position: relative; top: 100px;">
+    <ruby class="row5ex red-miliket">
+      <rb>ንቅረ</rb><rt><span></span></rt>
+      <rb>ብ</rb><rt><span>ነነ</span></rt>
+      <rb>፡ለመድኃኒተ፡ሕይወት</rb><rt><span></span></rt>
     </ruby>
-    <ruby class="row3ex">
-      <rb>ከ</rb><rt></rt>
-      <rb>በ</rb><rt><span>᎓</span></rt>
-      <rb>ሮ</rb><rt><span>ሞኂ</span></rt>
+    <ruby class="row4ex">
+      <rb>ን</rb><rt><span>᎓</span></rt>
+      <rb>ቅ</rb><rt><span>ደስ</span></rt>
+      <rb>ረ</rb><rt><span>᎖</span></rt>
+      <rb>ብ</rb><rt><span>ጥም</span></rt>
+      <rb>፡ለመድኃኒተ፡ሕይወ</rb><rt><span></span></rt>
+      <rb>ት</rb><rt><span>ጺ</span></rt>፡
+    </ruby>
+    <ruby class="row3ex red-miliket">
+      <rb>ን</rb><rt><span>᎖᎓</span></rt>
+      <rb>ቅረ</rb><rt><span>ቅጹ</span></rt>
+      <rb>ብ</rb><rt><span></span></rt>
+      <rb>፡</rb><rt><span></span></rt>
+      <rb>ለ</rb><rt><span></span></rt>
+      <rb>መ</rb><rt><span></span></rt>
+      <rb>ድ</rb><rt><span></span></rt>
+      <rb>ኃ</rb><rt><span>᎖</span></rt>
+      <rb>ኒ</rb><rt><span></span></rt>
+      <rb>ተ</rb><rt><span>᎖</span></rt>
+      <rb>፡ሕይወ</rb><rt><span></span></rt>
+      <rb>ት</rb><rt><span>ጥሮ</span></rt>፡
     </ruby>
     <ruby class="row2ex">
-      <rb>ከ</rb><rt><span>᎖</span></rt>
-      <rb>በ</rb><rt></rt>
-      <rb>ሮ</rb><rt><span>ሥቱ</span></rt>
+      <rb>ንቅረ</rb><rt><span>᎗</span></rt>
+      <rb>ብ</rb><rt><span>፴</span></rt>
+      <rb>፡</rb><rt><span></span></rt>
+      <rb>ለ</rb><rt><span></span></rt>
+      <rb>መ</rb><rt><span>᎑</span></rt>
+      <rb>ድ</rb><rt><span></span></rt>
+      <rb>ኃ</rb><rt><span>ዊ</span></rt>
+      <rb>ኒ</rb><rt><span></span></rt>
+      <rb>ተ</rb><rt><span></span></rt>
+      <rb>፡ሕይወ</rb><rt><span></span></rt>
+      <rb>ት</rb><rt><span>ለኪ</span></rt>፡
     </ruby>
-    <ruby class="row1">
-      <rb>ከ</rb><rt><span>᎐</span></rt>
-      <rb>በ</rb><rt><span>᎐</span></rt>
-      <rb>ሮ</rb><rt><span>ር</span></rt>
+    <ruby class="row1 red-miliket">
+      <rb>ንቅረ</rb><rt><span></span></rt>
+      <rb>ብ</rb><rt><span>᎒ጽ</span></rt>
+      <rb>፡</rb><rt><span></span></rt>
+      <rb>ለ</rb><rt><span>᎗</span></rt>
+      <rb>መ</rb><rt><span></span></rt>
+      <rb>ድ</rb><rt><span></span></rt>
+      <rb>ኃኒ</rb><rt><span>᎖</span></rt>
+      <rb>ተ</rb><rt><span>᎑</span></rt>
+      <rb>፡ሕይወ</rb><rt><span></span></rt>
+      <rb>ት</rb><rt><span></span></rt>፡
     </ruby>
     </div>
   </td>
   </tr>
   <tr>
   <td colspan="2"><script type="text/plain">
-    <ruby class="row4ex">
-      <rb>ከ</rb><rt></rt>
-      <rb>በሮ</rb><rt><span>በ᎖</span></rt>
+    <ruby class="row5ex red-miliket">
+      <rb>ንቅረ</rb><rt><span></span></rt>
+      <rb>ብ</rb><rt><span>ነነ</span></rt>
+      <rb>፡ለመድኃኒተ፡ሕይወት</rb><rt><span></span></rt>
     </ruby>
-    <ruby class="row3ex">
-      <rb>ከ</rb><rt></rt>
-      <rb>በ</rb><rt><span>᎓</span></rt>
-      <rb>ሮ</rb><rt><span>ሞኂ</span></rt><!-- rt right align desired -->
+    <ruby class="row4ex">
+      <rb>ን</rb><rt><span>᎓</span></rt>
+      <rb>ቅ</rb><rt><span>ደስ</span></rt>
+      <rb>ረ</rb><rt><span>᎖</span></rt>
+      <rb>ብ</rb><rt><span>ጥም</span></rt>
+      <rb>፡ለመድኃኒተ፡ሕይወ</rb><rt><span></span></rt>
+      <rb>ት</rb><rt><span>ጺ</span></rt>፡
+    </ruby>
+    <ruby class="row3ex red-miliket">
+      <rb>ን</rb><rt><span>᎖᎓</span></rt>
+      <rb>ቅረ</rb><rt><span>ቅጹ</span></rt>
+      <rb>ብ</rb><rt><span></span></rt>
+      <rb>፡</rb><rt><span></span></rt>
+      <rb>ለ</rb><rt><span></span></rt>
+      <rb>መ</rb><rt><span></span></rt>
+      <rb>ድ</rb><rt><span></span></rt>
+      <rb>ኃ</rb><rt><span>᎖</span></rt>
+      <rb>ኒ</rb><rt><span></span></rt>
+      <rb>ተ</rb><rt><span>᎖</span></rt>
+      <rb>፡ሕይወ</rb><rt><span></span></rt>
+      <rb>ት</rb><rt><span>ጥሮ</span></rt>፡
     </ruby>
     <ruby class="row2ex">
-      <rb>ከ</rb><rt><span>᎖</span></rt>
-      <rb>በ</rb><rt></rt>
-      <rb>ሮ</rb><rt><span>ሥቱ</span></rt><!-- rt right align desired -->
+      <rb>ንቅረ</rb><rt><span>᎗</span></rt>
+      <rb>ብ</rb><rt><span>፴</span></rt>
+      <rb>፡</rb><rt><span></span></rt>
+      <rb>ለ</rb><rt><span></span></rt>
+      <rb>መ</rb><rt><span>᎑</span></rt>
+      <rb>ድ</rb><rt><span></span></rt>
+      <rb>ኃ</rb><rt><span>ዊ</span></rt>
+      <rb>ኒ</rb><rt><span></span></rt>
+      <rb>ተ</rb><rt><span></span></rt>
+      <rb>፡ሕይወ</rb><rt><span></span></rt>
+      <rb>ት</rb><rt><span>ለኪ</span></rt>፡
     </ruby>
-    <ruby class="row1">
-      <rb>ከ</rb><rt><span>᎐</span></rt>
-      <rb>በ</rb><rt><span>᎐</span></rt>
-      <rb>ሮ</rb><rt><span>ር</span></rt><!-- rt right align desired -->
+    <ruby class="row1 red-miliket">
+      <rb>ንቅረ</rb><rt><span></span></rt>
+      <rb>ብ</rb><rt><span>᎒ጽ</span></rt>
+      <rb>፡</rb><rt><span></span></rt>
+      <rb>ለ</rb><rt><span>᎗</span></rt>
+      <rb>መ</rb><rt><span></span></rt>
+      <rb>ድ</rb><rt><span></span></rt>
+      <rb>ኃኒ</rb><rt><span>᎖</span></rt>
+      <rb>ተ</rb><rt><span>᎑</span></rt>
+      <rb>፡ሕይወ</rb><rt><span></span></rt>
+      <rb>ት</rb><rt><span></span></rt>፡
     </ruby>
   </script></td>
   </tr>
@@ -1172,52 +1241,73 @@ Selot Kidassie p. 129
 <h3>Use Case 12</h3>
 <table>
   <tr>
-  <td><img src="use-cases/SelotKidasiePage253i1.png"/></td>
-  <td width="50%" valign="bottom">
-    <div style="position: relative; top: 80px;">
-    <ruby class="row4ex">
-      <rb>ከ</rb><rt></rt>
-      <rb>በሮ</rb><rt><span>በ᎖</span></rt>
+  <col width="835px"/>
+  <col width="500px"/>
+  <tr>
+  <td style="vertical-align: baseline;"> <br/><img style="display: block; margin-left: auto; margin-right: auto; vertical-align: bottom;" src="use-cases/SelotKidasiePage253i1.png"/></td>
+  <td valign="bottom">
+    <div style="position: relative; top: 100px;"><span style="font-size: 50px; color: red;">ይዲ፤</span>
+    <ruby class="row4ex red-miliket">
+      <rb>ነ</rb><rt><span>᎖</span></rt>
+      <rb>ጽር</rb><rt><span>᎖᎓ራቀ᎖᎓᎙</span></rt>
     </ruby>
-    <ruby class="row3ex">
-      <rb>ከ</rb><rt></rt>
-      <rb>በ</rb><rt><span>᎓</span></rt>
-      <rb>ሮ</rb><rt><span>ሞኂ</span></rt>
+    <ruby class="row3ex red-miliket">
+      <rb>ነ</rb><rt><span>᎖</span></rt>
+      <rb>ጽ</rb><rt><span></span></rt>
+      <rb>ር</rb><rt><span>ቡ</span></rt>
     </ruby>
-    <ruby class="row2ex">
-      <rb>ከ</rb><rt><span>᎖</span></rt>
-      <rb>በ</rb><rt></rt>
-      <rb>ሮ</rb><rt><span>ሥቱ</span></rt>
+    <ruby class="row2ex red-miliket">
+      <rb>ነጽ</rb><rt><span></span></rt>
+      <rb>ር</rb><rt><span>᎐</span></rt>
     </ruby>
     <ruby class="row1">
-      <rb>ከ</rb><rt><span>᎐</span></rt>
-      <rb>በ</rb><rt><span>᎐</span></rt>
-      <rb>ሮ</rb><rt><span>ር</span></rt>
+      <rb>ነ</rb><rt>᎔</rt>
+      <rb>ጽር</rb><rt>᎑᎓ራቀ᎒ዑ</rt><span style="color: red;">።</span>
     </ruby>
+    <br/> <br/> <br/>
+    <span style="font-size: 50px; color: red;">ይካ፤</span>
+    <ruby class="row4ex red-miliket">
+      <rb>ቅድሳት፡ለ</rb><rt></rt>
+      <rb>ቅ</rb><rt><span>᎔</span></rt>
+      <rb>ዱ</rb><rt><span>᎖</span></rt>
+      <rb>ሳ</rb><rt><span>᎓</span></rt>
+      <rb>ን</rb><rt><span>ልየ</span></rt>
+    </ruby>
+    <ruby class="row3ex">
+      <rb>ቅ</rb><rt><span>᎑</span></rt>
+      <rb>ድ</rb><rt></rt>
+      <rb>ሳ</rb><rt><span>᎓</span></rt>
+      <rb>ት</rb><rt><span>ራቀ᎒ዑ</span></rt>
+      <rb>፡ለቅዱሳን፤</rb><rt></rt>
+    </ruby>
+    <ruby class="row2ex red-miliket">
+      <rb>ቅ</rb><rt></rt>
+      <rb>ድ</rb><rt></rt>
+      <rb>ሳ</rb><rt><span>᎖</span></rt>
+      <rb>ት</rb><rt><span>ቡ</span></rt>
+      <rb>፡</rb><rt></rt>
+      <rb>ለ</rb><rt><span>᎑</span></rt>
+      <rb>ቅዱ</rb><rt></rt>
+      <rb>ሳ</rb><rt><span>᎓</span></rt>
+      <rb>ን፤</rb><rt style="text-align: left;"><span>ጽራ</span></rt>
+    </ruby>
+    <ruby class="row1">
+      <rb>ቅ</rb><rt>᎑</rt>
+      <rb>ድ</rb><rt></rt>
+      <rb>ሳ</rb><rt>᎐</rt>
+      <rb>ት</rb><rt>ኃ</rt>
+      <rb>፡</rb><rt></rt>
+      <rb>ለ</rb><rt>᎔</rt>
+      <rb>ቅ</rb><rt>᎐</rt>
+      <rb>ዱ</rb><rt></rt>
+      <rb>ሳ</rb><rt>᎔᎖</rt>
+      <rb>ን፤</rb><rt style="text-align: left;">ስ᎖᎔</rt>
+    </ruby><br/>
     </div>
   </td>
   </tr>
   <tr>
   <td colspan="2"><script type="text/plain">
-    <ruby class="row4ex">
-      <rb>ከ</rb><rt></rt>
-      <rb>በሮ</rb><rt><span>በ᎖</span></rt>
-    </ruby>
-    <ruby class="row3ex">
-      <rb>ከ</rb><rt></rt>
-      <rb>በ</rb><rt><span>᎓</span></rt>
-      <rb>ሮ</rb><rt><span>ሞኂ</span></rt><!-- rt right align desired -->
-    </ruby>
-    <ruby class="row2ex">
-      <rb>ከ</rb><rt><span>᎖</span></rt>
-      <rb>በ</rb><rt></rt>
-      <rb>ሮ</rb><rt><span>ሥቱ</span></rt><!-- rt right align desired -->
-    </ruby>
-    <ruby class="row1">
-      <rb>ከ</rb><rt><span>᎐</span></rt>
-      <rb>በ</rb><rt><span>᎐</span></rt>
-      <rb>ሮ</rb><rt><span>ር</span></rt><!-- rt right align desired -->
-    </ruby>
   </script></td>
   </tr>
 </table>
@@ -1759,6 +1849,26 @@ Selot Kidassie p. 129
   <dd>YeTinsaie YeMetsahft Mastemiya Dirjit, ምዕራፍ ዘቅዱስ ያሬድ Me’eraf ZeKidus Yareid, Comercial Publishing Enterprise, Addis Ababa, 1987</dd>
 </dl>
 </section>
+
+ይዲ፤ነጽር።
+ይካ፤ቅድሳት፡ለቅዱሳን፤
+
+ራቀ
+ቡ
+ልየ
+ጽራ
+ኃ
+ሁ
+ዑ
+
+
+ንቅረብ፡ለመድኃኒት፡ሕይወት፡
+ደስ ቅጹ
+ጥም
+ጽ
+ዊ
+ጺ
+ጥሮ
 
 </body>
 </html>
