Use Case 12 markup copied into <script> section.

--- a/ZaimaCSS/ZaimaUseCases.html
+++ b/ZaimaCSS/ZaimaUseCases.html
@@ -1302,12 +1302,69 @@ Selot Kidassie p. 129
       <rb>ዱ</rb><rt></rt>
       <rb>ሳ</rb><rt>᎔᎖</rt>
       <rb>ን፤</rb><rt style="text-align: left;">ስ᎖᎔</rt>
-    </ruby><br/>
+    </ruby>
     </div>
   </td>
   </tr>
   <tr>
   <td colspan="2"><script type="text/plain">
+    <span style="font-size: 50px; color: red;">ይዲ፤</span>
+    <ruby class="row4ex red-miliket">
+      <rb>ነ</rb><rt><span>᎖</span></rt>
+      <rb>ጽር</rb><rt><span>᎖᎓ራቀ᎖᎓᎙</span></rt>
+    </ruby>
+    <ruby class="row3ex red-miliket">
+      <rb>ነ</rb><rt><span>᎖</span></rt>
+      <rb>ጽ</rb><rt><span></span></rt>
+      <rb>ር</rb><rt><span>ቡ</span></rt>
+    </ruby>
+    <ruby class="row2ex red-miliket">
+      <rb>ነጽ</rb><rt><span></span></rt>
+      <rb>ር</rb><rt><span>᎐</span></rt>
+    </ruby>
+    <ruby class="row1">
+      <rb>ነ</rb><rt>᎔</rt>
+      <rb>ጽር</rb><rt>᎑᎓ራቀ᎒ዑ</rt><span style="color: red;">።</span>
+    </ruby>
+    <br/> <br/> <br/>
+    <span style="font-size: 50px; color: red;">ይካ፤</span>
+    <ruby class="row4ex red-miliket">
+      <rb>ቅድሳት፡ለ</rb><rt></rt>
+      <rb>ቅ</rb><rt><span>᎔</span></rt>
+      <rb>ዱ</rb><rt><span>᎖</span></rt>
+      <rb>ሳ</rb><rt><span>᎓</span></rt>
+      <rb>ን</rb><rt><span>ልየ</span></rt>
+    </ruby>
+    <ruby class="row3ex">
+      <rb>ቅ</rb><rt><span>᎑</span></rt>
+      <rb>ድ</rb><rt></rt>
+      <rb>ሳ</rb><rt><span>᎓</span></rt>
+      <rb>ት</rb><rt><span>ራቀ᎒ዑ</span></rt>
+      <rb>፡ለቅዱሳን፤</rb><rt></rt>
+    </ruby>
+    <ruby class="row2ex red-miliket">
+      <rb>ቅ</rb><rt></rt>
+      <rb>ድ</rb><rt></rt>
+      <rb>ሳ</rb><rt><span>᎖</span></rt>
+      <rb>ት</rb><rt><span>ቡ</span></rt>
+      <rb>፡</rb><rt></rt>
+      <rb>ለ</rb><rt><span>᎑</span></rt>
+      <rb>ቅዱ</rb><rt></rt>
+      <rb>ሳ</rb><rt><span>᎓</span></rt>
+      <rb>ን፤</rb><rt style="text-align: left;"><span>ጽራ</span></rt>
+    </ruby>
+    <ruby class="row1">
+      <rb>ቅ</rb><rt>᎑</rt>
+      <rb>ድ</rb><rt></rt>
+      <rb>ሳ</rb><rt>᎐</rt>
+      <rb>ት</rb><rt>ኃ</rt>
+      <rb>፡</rb><rt></rt>
+      <rb>ለ</rb><rt>᎔</rt>
+      <rb>ቅ</rb><rt>᎐</rt>
+      <rb>ዱ</rb><rt></rt>
+      <rb>ሳ</rb><rt>᎔᎖</rt>
+      <rb>ን፤</rb><rt style="text-align: left;">ስ᎖᎔</rt>
+    </ruby>
   </script></td>
   </tr>
 </table>
