Use Case 6 markup copied into the script section.

--- a/ZaimaCSS/ZaimaUseCases.html
+++ b/ZaimaCSS/ZaimaUseCases.html
@@ -262,7 +262,7 @@ Selot Kidassie p. 129
 <table>
   <col width="250px"/>
   <col width="250px"/>
-  <col width="400px"/>
+  <col width="500px"/>
   <tr>
     <td colspan="2" style="border: 0"></td><th>Alternate Rendering</th>
   </tr>
@@ -632,24 +632,43 @@ Selot Kidassie p. 129
   </tr>
   <tr>
   <td colspan="2"><script type="text/plain">
-    <ruby class="row4ex">
-      <rb>ከ</rb><rt></rt>
-      <rb>በሮ</rb><rt><span>በ᎖</span></rt>
+    <ruby class="row4ex red-miliket">
+      <rb>ሀገ</rb><rt><span></span></rt>
+      <rb>ረ</rb><rt><span>᎒</span></rt>
+      <rb>ኪ፡ወ</rb><rt><span></span></rt>
+      <rb>ኢት</rb><rt><span>᎒ሙ᎘</span></rt>
+      <rb>ጐ</rb><rt><span>᎐</span></rt>
+      <rb>ንድ</rb><rt><span></span></rt>
+      <rb>ዪ</rb><rt><span>᎐᎘</span></rt>
     </ruby>
     <ruby class="row3ex">
-      <rb>ከ</rb><rt></rt>
-      <rb>በ</rb><rt><span>᎓</span></rt>
-      <rb>ሮ</rb><rt><span>ሞኂ</span></rt><!-- rt right align desired -->
+      <rb>ሀገ</rb><rt></rt>
+      <rb>ረ</rb><rt></rt>
+      <rb>ኪ፡ወኢ</rb><rt><span></span></rt>
+      <rb>ት</rb><rt><span>᎖</span></rt>
+      <rb>ጐ</rb><rt><span>᎐᎔</span></rt>
+      <rb>ን</rb><rt><span></span></rt>
+      <rb>ድ</rb><rt><span>᎐</span></rt>
+      <rb>ዪ</rb><rt><span></span></rt>
     </ruby>
     <ruby class="row2ex">
-      <rb>ከ</rb><rt><span>᎖</span></rt>
-      <rb>በ</rb><rt></rt>
-      <rb>ሮ</rb><rt><span>ሥቱ</span></rt><!-- rt right align desired -->
+      <rb>ሀገ</rb><rt></rt>
+      <rb>ረ</rb><rt><span>᎗</span></rt>
+      <rb>ኪ፡ወ</rb><rt></rt>
+      <rb>ኢ</rb><rt><span>ኢ</span></rt>
+      <rb>ትጐ</rb><rt><span>የሱስ</span></rt>
+      <rb>ንድዪ</rb><rt><span>ክርስቶ</span></rt>
     </ruby>
     <ruby class="row1">
-      <rb>ከ</rb><rt><span>᎐</span></rt>
-      <rb>በ</rb><rt><span>᎐</span></rt>
-      <rb>ሮ</rb><rt><span>ር</span></rt><!-- rt right align desired -->
+      <rb>ሀ</rb><rt></rt>
+      <rb>ገረኪ</rb><rt>ርጥቁ</rt>
+      <rb>፡ወ</rb><rt></rt>
+      <rb>ኢ</rb><rt>᎖᎓᎔</rt>
+      <rb>ት</rb><rt></rt>
+      <rb>ጐ</rb><rt></rt>
+      <rb>ን</rb><rt></rt>
+      <rb>ድ</rb><rt></rt>
+      <rb>ዪ</rb><rt></rt>፡
     </ruby>
   </script></td>
   </tr>
@@ -664,23 +683,23 @@ Selot Kidassie p. 129
 <h3>Use Case 7</h3>
 <table>
   <col width="300px"/>
-  <col width="250px"/>
+  <col width="230px"/>
   <tr>
   <td><img src="use-cases/MerhaLiqawntPages12i1.png"/></td>
   <td valign="bottom">
     <div style="position: relative; top: 50px;">
     <ruby class="row3ex red-miliket">
-      <rb>ጕ</rb><rt><span>᎒ሙ᎘</span></rt>
+      <rb>ጕ</rb><rt style="text-align: right;"><span>᎒ሙ᎘</span></rt>
       <rb>ር</rb><rt></rt>
       <rb>ዔ</rb><rt><span>᎐</span></rt>
       <rb>ሁ</rb><rt><span>ሢ</span></rt>
     </ruby>
     <ruby class="row2ex">
-      <rb>ጕ</rb><rt><span>ብር᎖᎓᎔᎓</span></rt>
+      <rb>ጕ</rb><rt style="text-align: right;"><span>ብር᎖᎓᎔᎓</span></rt>
       <rb>ርዔሁ</rb><rt></rt>
     </ruby>
     <ruby class="row1">
-      <rb>ጕ</rb><rt>ወሡ </rt>
+      <rb>ጕ</rb><rt style="text-align: right;">ወሡ </rt>
       <rb>ር</rb><rt>ራ</rt>
       <rb>ዔ</rb><rt>ሬ</rt>
       <rb>ሁ</rb><rt>ሃ</rt>
@@ -691,17 +710,17 @@ Selot Kidassie p. 129
   <tr>
   <td colspan="2"><script type="text/plain">
     <ruby class="row3ex red-miliket">
-      <rb>ጕ</rb><rt><span>᎒ሙ᎘</span></rt>
+      <rb>ጕ</rb><rt style="text-align: right;"><span>᎒ሙ᎘</span></rt>
       <rb>ር</rb><rt></rt>
       <rb>ዔ</rb><rt><span>᎐</span></rt>
       <rb>ሁ</rb><rt><span>ሢ</span></rt>
     </ruby>
     <ruby class="row2ex">
-      <rb>ጕ</rb><rt><span>ብር᎖᎓᎔᎓</span></rt>
+      <rb>ጕ</rb><rt style="text-align: right;"><span>ብር᎖᎓᎔᎓</span></rt>
       <rb>ርዔሁ</rb><rt></rt>
     </ruby>
     <ruby class="row1">
-      <rb>ጕ</rb><rt>ወሡ </rt>
+      <rb>ጕ</rb><rt style="text-align: right;">ወሡ </rt>
       <rb>ር</rb><rt>ራ</rt>
       <rb>ዔ</rb><rt>ሬ</rt>
       <rb>ሁ</rb><rt>ሃ</rt>
